# dtwParallel

./: .gitignore  AUTHORS  LICENSE  README.md  configuration.ini  output.csv  pyproject.toml  requirements.txt  setup.py
docs/: conf.py
dtwParallel/: Example_N_UTS.ipynb  Libro1.csv  Libro2.csv  X_train_tensor.npy  __main__.py  _version.py  conf.txt  configuration.ini  configuration.py  dtwParallel.py  dtw_functions.py  error_control.py  input.txt  input.xlsx  utils.py  utils_visualizations.py
exampleData/: Example_Paper.ipynb  Libro1.csv  Libro2.csv  Untitled.ipynb  X_data_2.npy  X_test.npy  exampleWithPublicDatasets-Copy1.ipynb  exampleWithPublicDatasets-OtherPackages.ipynb  exampleWithPublicDatasets-OthersPackages.ipynb  exampleWithPublicDatasets.ipynb  example_1.csv  tensorGenerator.ipynb  time_dtwParallel_2_dep.txt  time_dtwParallel_2_ind.txt  time_dtwParallel_ind.txt  time_fastdtw_indep.txt
exampleData/CodeExamples/: plot_timeExamples-252MTS.ipynb  plot_timeExamples-256MTS.ipynb  plot_timeExamples.ipynb  plot_timeExamples_V1.ipynb  plot_timeExamples_V2.ipynb
exampleData/CodeExamples/E1_SyntheticData/: Example_N_UTS.ipynb  Examples.ipynb
exampleData/CodeExamples/E2_FinanceData/: contador_dep.txt  contador_dep_r4_opt.txt  exampleWithPublicDatasets-Copy1.ipynb  exampleWithPublicDatasets-OthersPackages-Copy1.ipynb  exampleWithPublicDatasets-OthersPackages-Copy2.ipynb  exampleWithPublicDatasets-OthersPackages-Copy3.ipynb  exampleWithPublicDatasets-OthersPackages.ipynb  exampleWithPublicDatasets-dtaidistance.ipynb  exampleWithPublicDatasets-dtaidistance_indp.ipynb  exampleWithPublicDatasets-dtw.ipynb  exampleWithPublicDatasets-dtwParallel-exp2.ipynb  exampleWithPublicDatasets-dtwParallel.ipynb  exampleWithPublicDatasets-fastdtw.ipynb  exampleWithPublicDatasets-python-dtw.ipynb  exampleWithPublicDatasets-softwdtw.ipynb  exampleWithPublicDatasets-tslearn.dtw.ipynb  fastdtw_vf.txt  tensorGenerator.ipynb
exampleData/CodeExamples/Results_with_differents_Number_of_MTS/: dtwParallel_1000MTS_euclideanfunction_8threads.txt  dtwParallel_100MTS_euclideanfunction_8threads.txt  dtwParallel_100MTS_norm2_128threads.txt  dtwParallel_100MTS_norm2_32threads.txt  dtwParallel_100MTS_norm2_64threads.txt  dtwParallel_100MTS_norm2_8threads.txt  dtwParallel_2000MTS_euclideanfunction_8threads.txt  dtwParallel_2000MTS_norm2_8threads.txt  dtwParallel_250MTS_norm2_128threads.txt  dtwParallel_250MTS_norm2_32threads.txt  dtwParallel_250MTS_norm2_64threads.txt  dtwParallel_500MTS_euclideanfunction_16threads.txt  dtwParallel_500MTS_euclideanfunction_64threads.txt  dtwParallel_500MTS_norm2_16threads.txt  dtwParallel_500MTS_norm2_32threads.txt  dtwParallel_500MTS_norm2_64threads.txt  dtwParallel_500MTS_norm2_8threads.txt  dtwParallel_50MTS_euclideanfunction_128threads.txt  dtwParallel_50MTS_euclideanfunction_32threads.txt  dtwParallel_50MTS_norm2_128threads.txt  dtwParallel_50MTS_norm2_16threads.txt  dtwParallel_50MTS_norm2_64threads.txt  (+1 more)
exampleData/CodeExamples_new/: CompareLibraries.ipynb  Example-differents_number_of_MTS.ipynb  plot_timeExamples_V2.ipynb
exampleData/results_E1_SyntheticData/: dtaidistance.txt  dtw.txt  fastdtw.txt  softdtw.txt
exampleData/results_E2_SyntheticData/: dtaidistance_dep.txt  dtaidistance_dep_252.txt  dtaidistance_dep_256.txt  dtaidistance_indp.txt  dtw.txt  dtwParallel_d.txt  dtw_256.txt  fastdtw.txt  fastdtw_all.txt  time_dtwParallel_dep.txt
exampleData/results_E2_financeData/: dtwParallel_252_mult_threads.txt  dtwParallel_505_mult_threads.txt  dtwParallel_505_mult_threads_itakura.txt  dtwParallel_505_mult_threads_sakoe_chiba.txt
(+655 files in other folders)
