# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtwParallel"
version = "0.0.16"
description = "Python implementation of Dynamic Time Warping (DTW), which allows computing the dtw distance between one-dimensional and multidimensional time series, with the possibility of visualisation (one-dimensional case) and parallelisation (multidimensional case)."
readme = "README.md"
authors = [{ name = "Real Python", email = "escuderoarnanzoscar@gmail.com" }]
license = { file = "LICENSE" }

#classifiers = [
#    'Intended Audience :: Developers/Science/Reasearch',
#    'Topic :: Scientific/Engineering/Software Development',
#    'License :: OSI Approved :: BSD License',
#    'Programming Language :: Python :: 3'
#]

keywords = ["dtw", "parallel", "CPU"]

dependencies = [    
    "numpy~=1.20.2",
    "pandas~=1.2.2",
    "matplotlib~=3.2.2",
    "seaborn~=0.10.1",
    "gower~=0.0.5",
    "setuptools~=49.2.0",
    "scipy~=1.6.1"
]

requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/oscarescuderoarnanz/dtwParallel"

[project.scripts]
dtwParallel = "dtwParallel.dtwParallel:main"
