# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtwParallel"
version = "0.0.27"
description = "Python implementation of Dynamic Time Warping (DTW), which allows computing the dtw distance between one-dimensional and multidimensional time series, with the possibility of visualisation (one-dimensional case) and parallelisation (multidimensional case)."
readme = "README.md"
authors = [{ name = "Óscar", email = "escuderoarnanzoscar@gmail.com" }]
license = { file = "LICENSE" }

#classifiers = [
#    'Intended Audience :: Developers/Science/Reasearch',
#    'Topic :: Scientific/Engineering/Software Development',
#    'License :: OSI Approved :: BSD License',
#    'Programming Language :: Python :: 3'
#]

keywords = ["dtw", "parallel", "CPU"]

dependencies = [    
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "gower",
    "setuptools",
    "scipy"
]

requires-python = ">=3.6.1"

[project.urls]
Homepage = "https://github.com/oscarescuderoarnanz/dtwParallel"

[project.scripts]
dtwParallel = "dtwParallel.dtwParallel:main"
